--- a/package.json
+++ b/package.json
@@ -10,8 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.0",
+    "@react-native-community/geolocation": "^3.2.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-firebase/firestore": "^20.1.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
+    "@rnmapbox/maps": "^10.1.27",
+    "csv-parse": "^5.5.6",
+    "expo-file-system": "^17.0.1",
+    "expo-location": "^17.0.1",
+    "papaparse": "^5.4.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-csv": "^0.2.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-sensors": "^7.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
